public/stylesheets/application.css
@import url(http://fonts.googleapis.com/css?family=Sansita+One);
@import url(http://fonts.googleapis.com/css?family=Andada);

body {
  background-color: #66CC33;

  width: 600px;
  margin: auto;
  font-family: sans-serif;
  color: #262626;
}

a {
  color: inherit;
  text-decoration: none;
}

header {
  padding: 0 1em;
  padding-top: 1em;
}

header > h1 {
  margin-bottom: -0.2em;
  padding:0;
  font-family: 'Sansita One', cursive;
  font-size: 48px;
  text-shadow: 1px 1px #fff, -1px -1px #333;
}

header > h1 > a {
  color: #455545;
}

header > h1 + p {
  margin:0;
  padding: 0 0 0 0.5em;
  font-size:12px;
}

article h1 {
  font-size: 2em;
}

article h2 {
  font-size: 1em;
  font-weight:normal;
}

h1,h2,h3,h4,h5,h6 {
  margin:0;
  padding:0;
  
  color: #666;
}

h1 {
  font-family: 'Andada', sans-serif;
  font-weight: normal;
}

form input[type="submit"] {
  cursor: pointer;
}

#app {
  margin: 1em 0 0 0;
  padding: 0;
  padding-bottom:2em;
  background-color: #e6e6e6;
  
  border: 0.5em solid #262626;
  border-radius: 1em;
  
  overflow: hidden;
}

#app > header {
  padding-bottom: 1em;
  background-color: #eee;
  border-radius: 0.4em 0.4em 0 0;
}

#app > nav#page_navigation {
  padding: 1em 0;
  background: #eee;
}

#app > nav#page_navigation > * {
  position: relative;
}

#app > nav#page_navigation > h1 {
  font-size: 2em;
  font-weight: bold;
  
  color: #454545;
}

#app > nav#page_navigation .control {
  margin-right:0.5em;
  padding: 3px;
  
  display:inline-block;
  vertical-align:top;
  
  border: 1px solid #bbb;
  border-left:none;
  border-radius: 0 0.5em 0.5em 0;
  background-color: #e0e0e0;
  background-image: url('/images/add_16.png');
  background-repeat: no-repeat;
  background-position: 50% 50%;
}

#app > nav#page_navigation .control + h1 {
  display:inline-block;
}

#app > nav#page_navigation .control > a {
  width: 2em;
  height: 2em;
  display:inline-block;
  vertical-align:middle;
  background-repeat: no-repeat;
  background-position: 50% 50%;
}

#app > nav#page_navigation .control > a.cancel {
  background-image: url('/images/cancel_16.png');
}

#app > nav#page_navigation .control > a.add {
  background-image: url('/images/add_16.png');
}

#app > nav#page_navigation .control > form {
  display:inline-block;
  vertical-align:middle;
}

#app > nav#page_navigation .control > form > * {
  float:left;
  font-size: 16px;
}

#app > nav#page_navigation .control > form > #time_entry_name {
  margin:0;
  padding: 0.25em;
  background: #f6f6f6;
  border: 1px solid #bbb;
  border-right:none;
}

#app > nav#page_navigation .control > form > input[type="submit"] {
  margin:0;
  padding: 0.25em 0.5em;
  color: #999;
  background: #f6f6f6;
  border: 1px solid #bbb;
  border-left:none;
}

#app > nav#page_navigation .control > form > #time_entry_name:focus,
#app > nav#page_navigation .control > form > #time_entry_name:focus + input[type="submit"] {
  border-color: #6c3;
  outline: none;
}

#app > article, #app > div, #app > form {
  padding: 1em 1em 0 1em;
}

#time_entries {
  padding: 0 !important;
  background-color: #E6E6E6;

  border-radius: 0 0 1em 1em;
}

#time_entries > .time_entry {
  padding:0.25em 0;
  padding-bottom: 1em;
  
  height: 4em;
  
  border-top: 1px solid #ccc;
  background: -webkit-gradient(linear, left top, left bottom, from(#d6d6d6), color-stop(10%, #e0e0e0), to(#e6e6e6));
  background-size: 100% 4em;
  background-repeat: no-repeat;
}

#time_entries > .time_entry .content {
  display:inline-block;
}

#time_entries > .time_entry .control {
  margin-top:0.5em;
  margin-right:1em;
  display:inline-block;
  vertical-align:top;
}

#time_entries > .time_entry .control .archive {
  width: 2em;
  height: 2em;
  display:block;
  visibility:hidden;
  border:none;
}

#time_entries > .time_entry:hover .control .archive {
  background-image: url('/images/archive_16.png');
  background-repeat: no-repeat;
  background-position: 50% 50%;
  visibility:visible;
}

#time_entries > .time_entry form{
  padding:0;
  bottom: 0.25em;
  float:right;
  position: relative;
}

#time_entries > .time_entry form input[type="submit"]{
  margin: 0;
  margin-top: -1px;
  padding:0.5em 1em;
  
  cursor: pointer;
  
  border:none;
  background: -webkit-gradient(linear, left top, left bottom, from(#e6e6e6), color-stop(85%,#e6e6e6),color-stop(85%,#ccc), to(#ccc));

  border: 1px solid #ccc;
  border-top:none;
  border-right: none;
}

#time_entries > .time_entry form input[type="submit"][disabled]{
  cursor: default;
}

#time_entries > .time_entry form input[type="submit"][value="start"]{
  background: -webkit-gradient(linear, left top, left bottom, from(#e6e6e6), color-stop(85%,#e6e6e6),color-stop(85%,#6c3), to(#6c3));
}

#time_entries > .time_entry form input[type="submit"][value="stop"]{
  background: -webkit-gradient(linear, left top, left bottom, from(#e6e6e6), color-stop(85%,#e6e6e6),color-stop(85%,#c00), to(#C00));
}

#time_entries > .time_entry:first-child form input[type="submit"]{
  background: -webkit-gradient(linear, left top, left bottom, from(#eee), color-stop(85%,#eee),color-stop(85%,#ccc), to(#ccc));
}

#time_entries > .time_entry:first-child form input[type="submit"][value="start"] {
  background: -webkit-gradient(linear, left top, left bottom, from(#eee), color-stop(85%,#eee),color-stop(85%,#6c3), to(#6c3));
}

#time_entries > .time_entry:first-child form input[type="submit"][value="stop"] {
  background: -webkit-gradient(linear, left top, left bottom, from(#eee), color-stop(85%,#eee),color-stop(85%,#C00), to(#C00));
}

#user_navigation {
  padding: 0.5em;
  background-color: #f6f6f6;
  color: #999;

  font-size: 14px;
  
  border: 1px solid #fff;
  border-right:none;
  border-top:none;
  border-radius: 0 0.4em 0 .25em;

  float:right;
  position:relative;
  bottom: 1.15em;
  left: 1.2em;
}

#user_navigation > a {
  padding:0;
  color: #999;
}

.time_entry {
  padding: 0 1em;
}

.notice, .alert, .error {
  margin:0;
  padding: 1em 1em 2em 1em;
  margin-bottom: -1em;
  margin-top: 0em;

  padding-left: 2.5em;
  background-color: #262626;
  background-repeat: no-repeat;
  background-position: 1em 1em;

  color: #E6E6E6;
}

.notice {
  background-image: url('/images/notice_16.png');
}

.alert, .error {
  background-image: url('/images/alert_16.png');
}

